--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,13 @@
             <version>4.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.nacos</groupId>
+            <artifactId>nacos-client</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <properties>
